gcc/cp/ChangeLog 2015-11-11  Dominique d'Humieres <dominiq@lps.ens.fr>

PR bootstrap/68271
	* parser.h (cp_token): Update pragma_kind to 8.

gcc/c-family/ChangeLog
2015-11-11  Dominique d'Humieres <dominiq@lps.ens.fr>

	PR bootstrap/68271
	* c-pragma.c (c_register_pragma_1): Update the gcc_assert to 256.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@230172 138bc75d-0d04-0410-961f-82ee72b054a4